# warthog_simulator

./: .gitignore
PSPSO/: CMakeLists.txt  README.md  bindings.cpp
PSPSO/PSO/: PSO.cpp  PSO.hpp
PSPSO/Particle/: Particle.cpp  Particle.hpp
PSPSO/Subsworm/: Subsworm.cpp  Subsworm.hpp
src/: CMakeLists.txt  README.md  package.xml  requirements.txt  simulation.launch
src/bag_parser/: gazebo_dataset_parser.py
src/model/: README.md  model_test.py
src/model/neural_models/model_example/: neural_ode_dry_concrete.pth  neural_ode_ice.pth  neural_ode_mud.pth  neural_ode_wet_asphalt.pth
src/ros_nodes/: surface_detector.py  trajectory_runner.py
src/scripts/: build_pspso.sh  python_venv_setup.sh  rosbag_record.sh  setup.sh  start_model_testing.sh  start_simulation.sh
src/urdf/: warthog_ground_truth.urdf.xacro
src/world_generation/: README.md  world_generator.py
src/world_generation/templates/: surface_example.world  template.world  world_header_template.world
src/worlds_library/basis_example/dry_concrete/: dry_concrete.world  dry_concrete_surface_map.json
src/worlds_library/basis_example/ice/: ice.world  ice_surface_map.json
src/worlds_library/basis_example/mud/: mud.world  mud_surface_map.json
src/worlds_library/basis_example/soft_soil/: soft_soil.world  soft_soil_surface_map.json
src/worlds_library/basis_example/wet_asphalt/: wet_asphalt.world  wet_asphalt_surface_map.json
src/worlds_library/squares_example/: squares_example.world  squares_example_surface_map.json
src/worlds_library/voronoi_example/: voronoi_example.world  voronoi_example_surface_map.json
src/worlds_library/voronoi_example/meshes/: voronoi_example_zone_0.stl  voronoi_example_zone_1.stl  voronoi_example_zone_10.stl  voronoi_example_zone_11.stl  voronoi_example_zone_12.stl  voronoi_example_zone_13.stl  voronoi_example_zone_14.stl  voronoi_example_zone_15.stl  voronoi_example_zone_16.stl  voronoi_example_zone_17.stl  voronoi_example_zone_18.stl  voronoi_example_zone_19.stl  voronoi_example_zone_2.stl  voronoi_example_zone_20.stl  voronoi_example_zone_21.stl  voronoi_example_zone_22.stl  voronoi_example_zone_23.stl  voronoi_example_zone_24.stl  voronoi_example_zone_25.stl  voronoi_example_zone_26.stl  voronoi_example_zone_27.stl  voronoi_example_zone_28.stl  voronoi_example_zone_29.stl  voronoi_example_zone_3.stl  voronoi_example_zone_30.stl  voronoi_example_zone_31.stl  voronoi_example_zone_32.stl  voronoi_example_zone_33.stl  voronoi_example_zone_34.stl  voronoi_example_zone_35.stl  voronoi_example_zone_36.stl  voronoi_example_zone_37.stl  voronoi_example_zone_38.stl  voronoi_example_zone_39.stl  voronoi_example_zone_4.stl  voronoi_example_zone_40.stl  voronoi_example_zone_41.stl  voronoi_example_zone_42.stl  voronoi_example_zone_43.stl  (+61 more)
src/worlds_library/world_example/: world_example.world  world_example_surface_map.json
(+16 files in other folders)
